--- a/src/Components/NovoSideBar/menuSidebarModules.css
+++ b/src/Components/NovoSideBar/menuSidebarModules.css
@@ -1,18 +1,15 @@
-.containerMenu{
-    height: 100vh;
-}
+
 .sidebar{
     position: relative;
     width: 250px;
-    height: 100vh;
+    min-height: 100% !important;
     display: flex;
     flex-direction: column;
     gap: .2em;
     background-color: #fff;
     transition: all 0.3s;
-    z-index: 999;
+    z-index: 99;
     border-right: 1px solid #7575757a;
-    
 }
 
 .header-logo {
@@ -35,14 +32,12 @@
     font-weight: 500;
     color: #757575;
     text-transform: uppercase;
-    margin-bottom: 10px;
+    margin-bottom: .5em;
     margin-left: 1em;
 }
 
 
-.nav{
-    flex: 1;
-}
+
 .menu ul li{
     position: relative;
     list-style: none;
