--- a/src/Components/PacienteProfile/PacienteModules.css
+++ b/src/Components/PacienteProfile/PacienteModules.css
@@ -1,24 +1,20 @@
 
   
-  .container-user-profile {
+  .container-paciente-profile {
     box-shadow: 0 0 5px rgba(0,0,0,.2);
-    margin: 1em auto;
     background-color: #D9AFD9;
     background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     border-radius: .5em;
-    width: 100%;
     height: auto;
     width: fit-content;    
 }
   
   .header-container {
-    width: 100%;
     padding: 2em;
     margin-bottom: -1em;
   }
   
   .main-heading {   
-    width: 100%;
     margin-left: 4em;
     display: flex;
     color: #fff;  
@@ -50,7 +46,6 @@
     color: #555;
     padding: 1em;
     position: relative;
-    width: auto;
     height: 100%;
   }
   
@@ -79,17 +74,88 @@
     font-weight: 900;
     margin-top: 8px;
   }
+  /* style tabs */
+  .nav-tabs {
+    margin-top: 1em;
+    margin-bottom: 1.5em;
+    border: none;
+    gap: 1em;
+  }
+
+  .custom-tab-btn {
+    font-size: 17px;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: .8em 2em;
+    display: inline-block;
+    border-radius: 6em;
+    transition: all .2s;
+    border: none;
+    font-family: inherit;
+    font-weight: 500;
+    border: 1px solid #ccc;
+    color: black;
+    background-color: #fff;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+
+  }
   
+  .custom-tab-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .custom-tab-btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+  .custom-tab-btn::after {
+    content:"";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+  }
+  
+  .custom-tab-btn::after {
+    background-color: #fff;
+  }
+  .custom-tab-btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+  }
+  
+  .tab-pane {
+    display: none;
+  }
+  
+  .tab-pane.active {
+    display: block;
+  }
+  
+
+  /* end style tabs */
   .body-info {
     position: relative;
-    max-height: 100%;
     width: 100%;
     overflow: hidden;
     transition: all 600ms ease-out;
   }
+  .sessao-grafico{
+    width: 65%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+  }
+
   /* Estilos para telas menores que 768px (por exemplo, smartphones) */
 @media (max-width: 768px) {
-    .container-user-profile {
+    .container-paciente-profile {
       max-width: 100%; /* Aumenta a largura máxima para preencher a tela */
       padding: 0.5em; /* Reduz o espaçamento interno */
     }
@@ -108,25 +174,3 @@
   }
   
   
-
-.container-inputs {
-display: grid;
-grid-template-columns: 1fr 1fr; 
-gap: 20px;
-}
-
-.container-form >div{
-margin-top: 1em;
-
-}
-.titulo-form{
-  font-size: 16;
-}
-.subtitulo-form{
-  font-size: 14px;
-}
-
-.container-botao-atualizar{
-  width: 15%;
-}
-
