--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ ul{
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  margin-bottom: 2em;
 }
 .user-profile{
   position: relative;
