--- a/src/Components/PacienteProfile/PacienteModules.css
+++ b/src/Components/PacienteProfile/PacienteModules.css
@@ -1,5 +1,3 @@
-
-  
   .container-paciente-profile {
     box-shadow: 0 0 5px rgba(0,0,0,.2);
     background-color: #D9AFD9;
@@ -10,36 +8,33 @@
 }
   
   .header-container {
-    padding: 2em;
+    display: flex;
+    padding: 2em ;
     margin-bottom: -1em;
+    margin-left:7em ;
+    gap: .5em;
   }
   
-  .main-heading {   
-    margin-left: 4em;
-    display: flex;
-    color: #fff;  
-    font-size: 26px;
-  }
   .main-heading h1{
     font-weight: bold;
+    font-size: 26px;
+    color: #fff;
   }
   .main-heading span{
     font-weight: 500;
+    color: #fff;
   }
   
   .tag {
+    display: flex;
+    justify-content: center;
     background-color: rgba(255, 255, 255, .35);
     border-radius: 20px;
     font-size: 11px;
     padding: 1em 2em;
-    margin-left: .5em;
     text-transform: uppercase;
+    width: auto;
   }  
-  .stat-number {
-    display: inline-block;
-    font-weight: 600;
-    margin-left: 4px;
-  }
   
   .body-content {
     background-color: #fff;
@@ -47,6 +42,7 @@
     padding: 1em;
     position: relative;
     height: 100%;
+    width: auto;
   }
   
   .body-image {
@@ -129,6 +125,7 @@
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
   }
+
   
   .tab-pane {
     display: none;
@@ -137,7 +134,10 @@
   .tab-pane.active {
     display: block;
   }
-  
+  .tab-pane{
+    width: auto;
+  }
+
 
   /* end style tabs */
   .body-info {
@@ -147,10 +147,12 @@
     transition: all 600ms ease-out;
   }
   .sessao-grafico{
-    width: 65%;
-    display: grid;
-    justify-content: center;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    min-width: 25%;
+    padding: 0px;
   }
 
   /* Estilos para telas menores que 768px (por exemplo, smartphones) */
@@ -159,16 +161,71 @@
       max-width: 100%; /* Aumenta a largura máxima para preencher a tela */
       padding: 0.5em; /* Reduz o espaçamento interno */
     }
-  
+    .custom-tab-btn {
+      font-size: 17px;
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: .4em 1.2em;
+    }
+    .sessao-grafico{
+      width: 100%;
+    }
     .header-container {
-      flex-direction: column; /* Coloca os elementos em uma coluna */
-      align-items: flex-start; /* Alinha à esquerda */
-      padding: 1em; /* Ajusta o espaçamento */
+      flex-wrap: wrap;
+      padding: 2em ;
+      margin-bottom: -1.5em;
+      margin-left:7em ;
+      gap: 0em;
     }
   
-    .main-heading {
-      margin-left: 0; /* Remove a margem à esquerda */
+    .tag {
+      border-radius: 20px;
+      font-size: 11px;
+      padding: 1em ;
+    }  
+    .body-stats {
+      font-size: 12px;
+      font-weight: 700;
+      margin: .2em 0 0 0;
+      padding-top: .2em;
+      position: relative;
+      text-transform: uppercase;
+      width: 100%;
     }
+  
+    /* Outros ajustes de estilo ... */
+  }
+  @media (max-width: 480px) {
+    .container-paciente-profile {
+      max-width: 100%; /* Aumenta a largura máxima para preencher a tela */
+      padding: 0.5em; /* Reduz o espaçamento interno */
+    }
+    .custom-tab-btn {
+      font-size: 14px;
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: .3em 1em;
+    }
+    .sessao-grafico{
+      width: 100%;
+    }
+    .header-container{
+
+    }
+    .tag {
+      border-radius: 20px;
+      font-size: 11px;
+      padding: 1em;
+    }  
+    /* .body-stats {
+      display: inline-block;
+      font-size: 12px;
+      font-weight: 700;
+      margin: -10px 0  0 15px;
+      position: relative;
+      text-transform: uppercase;
+      width: 25%;
+    } */
   
     /* Outros ajustes de estilo ... */
   }
