--- a/src/Components/NovoSideBar/menuSidebarModules.css
+++ b/src/Components/NovoSideBar/menuSidebarModules.css
@@ -9,7 +9,8 @@
     background-color: #fff;
     transition: all 0.3s;
     z-index: 99;
-    border-right: 1px solid #7575757a;
+    border-right: 1px solid #F5F5F9;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .header-logo {
