--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ ul{
   grid-template-columns: auto 1fr; /* Duas colunas com largura igual */
   grid-template-rows: 1fr auto; /* Duas linhas, a segunda com altura automática para o footer */
   min-height: 100vh; /* Garante que o conteúdo ocupe pelo menos toda a altura da janela */
+  background: #F5F5F9;
 }
 
 .container-left {
