--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,13 @@ a{
 ul{
   list-style: none;
 } 
+.sessao-login{
+  width: 100%;
+  height: 100vh;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .container-layout {
   width: 100%;
